# ProtoClientTester

./: CMakeLists.txt  ProtoClientTester.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  protoclient.cpp  protoclient.h  sessionmanager.cpp  sessionmanager.h
protoc/: data_proto.pb.cc  data_proto.pb.h
